--- a/src/app/app-layout/about/about-story/about-story.component.html
+++ b/src/app/app-layout/about/about-story/about-story.component.html
@@ -93,7 +93,7 @@
 <!-- Achievement Gallery -->
 <section class="achievement-gallery py-5">
   <div class="container">
-    <h2 class="text-center mb-5">Dấu Ấn Kalivisa</h2>
+    <h2 class="text-center mb-5">Dấu Ấn VISA</h2>
     <div class="row g-4">
       <div class="col-md-4">
         <div class="gallery-item">
