--- a/src/app/app-layout/about/contact/contact.component.html
+++ b/src/app/app-layout/about/contact/contact.component.html
@@ -8,10 +8,10 @@
               <h1 class="display-5 mb-4">Có Câu Hỏi? Đừng Ngần Ngại Liên Hệ Với Chúng Tôi</h1>
               <div class="d-flex border-bottom mb-4 pb-4">
                   <i class="fas fa-map-marked-alt fa-4x text-primary bg-light p-3 rounded"></i>
-                  <div class="ps-3">
+                  <!-- <div class="ps-3">
                       <h5>Địa Chỉ</h5>
                       <p>29/12 Nguyễn Bỉnh Khiêm Phường Đa Kao, Quận 1, TP Hồ Chí Minh, Việt Nam</p>
-                  </div>
+                  </div> -->
               </div>
               <div class="row g-3">
                   <div class="col-xl-6">
@@ -30,7 +30,7 @@
                           </div>
                       </div>
                   </div>
-                  <div class="col-xl-6">
+                  <!-- <div class="col-xl-6">
                       <div class="d-flex">
                           <i class="fas fa-clone fa-3x text-primary"></i>
                           <div class="ps-3">
@@ -45,7 +45,7 @@
                               </div>
                           </div>
                       </div>
-                  </div>
+                  </div> -->
               </div>
               <div class="d-flex align-items-center pt-3">
                   <div class="me-4">
@@ -110,7 +110,7 @@
           </div>
       </div>
       <div class="office pt-5">
-      <div class="wow fadeInUp" data-wow-delay="0.1s">
+      <!-- <div class="wow fadeInUp" data-wow-delay="0.1s">
               <div class="pt-5 wow zoomIn" data-wow-delay="0.1s">
                   <div class="rounded h-100">
                       <iframe class="rounded w-100"
@@ -118,6 +118,6 @@
                       loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
               </div>
-      </div>
+      </div> -->
   </div>
 </div>
