--- a/src/app/app-layout/header/header.component.html
+++ b/src/app/app-layout/header/header.component.html
@@ -35,7 +35,7 @@
 <div class="container-fluid nav-bar p-0">
   <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 px-lg-5 py-3 py-lg-0">
     <a routerLink="/" class="navbar-brand p-0" style="background-color: #134a86;">
-      <h1 class="display-5 text-secondary m-0"><img src="../../../assets/images/logo.png" class="img-fluid" alt="">KALIVISA</h1>
+      <h1 class="display-5 text-secondary m-0"><img src="../../../assets/images/logo.png" class="img-fluid" alt="">MINH MINH VISA</h1>
     </a>
     <!-- Mobile Menu Toggler -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
@@ -103,7 +103,7 @@
           <span>Login</span>
         </a>
       </li>
-    
+
       <!-- Icon Logout -->
       <li class="nav-item" *ngIf="isLogin">
         <a class="nav-link" (click)="logOut()">
@@ -111,7 +111,7 @@
           <span>Logout</span>
         </a>
       </li>
-      
+
     </ul>
 
     <div class="tab-content">
