--- a/src/app/app-layout/footer/footer.component.html
+++ b/src/app/app-layout/footer/footer.component.html
@@ -5,7 +5,7 @@
           <div class="col-md-6 col-lg-6 col-xl-3">
               <div class="footer-item d-flex flex-column">
                   <h4 class="text-secondary mb-4">Thông tin liên hệ</h4>
-                  <a href=""><i class="fa fa-map-marker-alt me-2"></i> 29/12 Nguyễn Bỉnh Khiêm Phường Đa Kao, Quận 1, TP Hồ Chí Minh, Việt Nam</a>
+                  <!-- <a href=""><i class="fa fa-map-marker-alt me-2"></i> 29/12 Nguyễn Bỉnh Khiêm Phường Đa Kao, Quận 1, TP Hồ Chí Minh, Việt Nam</a> -->
                   <a href=""><i class="fas fa-envelope me-2"></i> jessie.le@kalivisa.com</a>
                   <a href=""><i class="fas fa-phone me-2"></i>0938 594 111</a>
                   <a href="" class="mb-3"><i class="fas fa-print me-2"></i>0938 594 111</a>
@@ -20,7 +20,7 @@
           </div>
 
           <!-- Giờ làm việc -->
-          <div class="col-md-6 col-lg-6 col-xl-3">
+          <!-- <div class="col-md-6 col-lg-6 col-xl-3">
               <div class="footer-item d-flex flex-column">
                   <h4 class="text-secondary mb-4">Giờ làm việc</h4>
                   <div class="mb-3">
@@ -36,7 +36,7 @@
                       <p class="text-white mb-0">Chủ Nhật là ngày nghỉ của chúng tôi</p>
                   </div>
               </div>
-          </div>
+          </div> -->
 
           <!-- Dịch vụ của chúng tôi -->
           <div class="col-md-6 col-lg-6 col-xl-3">
