--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -79,13 +79,13 @@
 </section>
 
 <!-- Video Section -->
-<section class="video-section py-7">
+<!-- <section class="video-section py-7">
     <div class="container text-center">
         <h2 class="display-5 mb-4">Xem Video Giới Thiệu</h2>
         <iframe class="w-100" height="400" src="https://www.youtube.com/embed/s3g-309K35w?si=PVL4Ok3HpZuhiocH" title="Video Giới Thiệu" frameborder="0" allowfullscreen></iframe>
         <p class="mt-3">Khám phá thêm về chúng tôi và những dịch vụ mà chúng tôi cung cấp.</p>
     </div>
-</section>
+</section> -->
 
 <!-- Testimonials Section -->
 <section class="testimonials-section py-7 bg-light">
