--- a/src/app/app-layout/login/my-account/my-account.component.html
+++ b/src/app/app-layout/login/my-account/my-account.component.html
@@ -74,7 +74,7 @@
                       <h3 class="card-title">Billing Address</h3><!-- End .card-title -->
 
                       <p>
-                        {{user.userName}}<br>
+                        {{user.username}}<br>
                         {{user.address}}<br>
                         {{user.phone}}<br>
                         {{user.email}}<br>
