--- a/src/app/app-layout/trade/admin-chat/admin-chat.component.html
+++ b/src/app/app-layout/trade/admin-chat/admin-chat.component.html
@@ -1,9 +1,9 @@
 <div class="messenger-container mb-4 mt-2">
   <!-- Danh sách người dùng -->
   <div class="user-list">
-      <div class="user-item" data-user-id="1">
+      <div class="user-item" data-user-id="1" (click)="clickInfoUser()">
           <img src="avatar1.jpg" alt="User 1">
-          <span>Người dùng 1</span>
+          <span >Người dùng 1</span>
       </div>
       <div class="user-item" data-user-id="2">
           <img src="avatar2.jpg" alt="User 2">
@@ -17,12 +17,35 @@
       <div class="message-header">
           <span>Tin nhắn với <span id="current-user">Người dùng 1</span></span>
       </div>
-      <div class="message-content" id="message-content">
-          <!-- Nội dung tin nhắn sẽ được hiển thị ở đây -->
+      <ul class="messages"  #messages style="height: 400px; overflow-y: auto;" >
+        <li class="message" *ngFor="let item of messageList"
+            [ngClass]="{'left': item.message_side === 'receiver', 'right': item.message_side === 'sender'}">
+            <div class="avatar"></div>
+            <div class="text_wrapper">
+                <div class="name">{{ item.user }}</div>
+                <div class="text" [innerHTML]="item.message"></div>
+                <img *ngIf="isImage(item.image)" (click)="imgClick(apiUrl + '/' + item.image)"
+                    [src]="apiUrl + '/' + item.image" class="img-fluid rounded chat-image" alt="Chat image" />
+                <a *ngIf="!isImage(item.image) && item.image" class="file-attachment"
+                    [href]="apiUrl + '/' + item.image" download="{{ apiUrl + '/' + item.image }}">
+                    <i class="fas fa-file file-icon"></i>
+                    <span class="file-name">{{ item.image.replace("upload/product/", "") }}</span>
+                    <i class="fas fa-download download-icon"></i>
+                </a>
+            </div>
+        </li>
+    </ul>
+    <div class="bottom_wrapper clearfix">
+      <div class="message_input_wrapper">
+          <input class="message_input" placeholder="Message..." [(ngModel)]="messageInput"
+              (keyup.enter)="sendMessage(false)" />
       </div>
-      <div class="message-input">
-          <input type="text" id="message-input" placeholder="Nhập tin nhắn...">
-          <button id="send-button">Gửi</button>
+      <div class="send_message" (click)="sendMessage(false)">
+          <div class="icon"></div>
+          <div class="text">Send</div>
       </div>
+      <app-image-upload class="mb-2 shadow-sm" [isShowImg]="false"
+          (changeFile)="changeFileName($event)" [imageUrl]="imgName"></app-image-upload>
+  </div>
   </div>
 </div>
