--- a/src/app/app-layout/post/post-detail/post-detail.component.html
+++ b/src/app/app-layout/post/post-detail/post-detail.component.html
@@ -2,13 +2,18 @@
   <div class="container mt-3">
     <article class="entry single-entry entry-fullwidth">
       <div class="row">
+        <div class="col-lg-11 mb-5">
+            <h2 class="text-right" style="color:hsl(0, 0%, 0%)!important;">
+              <strong>{{ blog.title }}</strong>
+            </h2>
+        </div>
+
         <div class="col-lg-11">
-          <div class="entry-body">
-            <h1 class="text-center">
-              {{ blog.title }}
-            </h1>
+          <div class="overflow-hidden">
+            <div [innerHTML]="sanitizedContent"></div>
           </div>
         </div>
+
         <div class="col-lg-11 mt-4">
           <span class="entry-author">
             Tác giả: <a href="#">{{ blog.author }}</a>
@@ -16,11 +21,6 @@
           <span class="meta-separator">|</span>
           <a href="#">Ngày đăng: {{ blog.createdAt | date: 'shortDate' }}</a>
           <span class="meta-separator">|</span>
-        </div>
-        <div class="col-lg-11">
-          <div class="product-description overflow-hidden">
-            <div [innerHTML]="sanitizedContent"></div>
-          </div>
         </div>
 
       </div>
