--- a/src/app/app-layout/trade/admin-chat/admin-chat.component.html
+++ b/src/app/app-layout/trade/admin-chat/admin-chat.component.html
@@ -1,49 +1,44 @@
 <div class="messenger-container mb-4 mt-2">
-  <!-- Danh sách người dùng -->
-  <div class="user-list">
-    <ng-container *ngFor="let item of infoMessages">
-      <div class="user-item" data-user-id="1" (click)="clickInfoUser(item)">
-        <img src="avatar1.jpg" alt="User 1">
-        <span >{{item.userName}}</span>
+    <!-- Danh sách người dùng -->
+    <div class="user-list">
+      <ng-container *ngFor="let item of infoMessages">
+        <div class="user-item" (click)="clickInfoUser(item)">
+          <span>{{item.userName}}</span>
+        </div>
+      </ng-container>
     </div>
-    </ng-container>
-      <!-- Thêm nhiều người dùng khác -->
-  </div>
-
-  <!-- Hộp tin nhắn -->
-  <div class="message-box">
+  
+    <!-- Hộp tin nhắn -->
+    <div class="message-box">
       <div class="message-header">
-          <span>Tin nhắn với <span id="current-user">{{infoMessage.userName}}</span></span>
+        <span>Tin nhắn với <span id="current-user">{{infoMessage.userName}}</span></span>
       </div>
-      <ul class="messages"  #messages style="height: 400px; overflow-y: auto;" >
-        <li class="message" *ngFor="let item of messageList"
-            [ngClass]="{'left': item.message_side === 'receiver', 'right': item.message_side === 'sender'}">
-            <div class="avatar"></div>
-            <div class="text_wrapper">
-                <div class="name">{{ item.user }}</div>
-                <div class="text" [innerHTML]="item.message"></div>
-                <img *ngIf="isImage(item.image)" (click)="imgClick(apiUrl + '/' + item.image)"
-                    [src]="apiUrl + '/' + item.image" class="img-fluid rounded chat-image" alt="Chat image" />
-                <a *ngIf="!isImage(item.image) && item.image" class="file-attachment"
-                    [href]="apiUrl + '/' + item.image" download="{{ apiUrl + '/' + item.image }}">
+      <div class="message-content">
+        <ul class="messages" #messages>
+            <li class="message" *ngFor="let item of messageList" [ngClass]="{'left': item.message_side === 'receiver', 'right': item.message_side === 'sender'}">
+                <div class="avatar"></div>
+                <div class="text_wrapper">
+                  <div class="name">{{ item.user }}</div>
+                  <div class="text" [innerHTML]="item.message"></div>
+                  <img *ngIf="isImage(item.image)" (click)="imgClick(apiUrl + '/' + item.image)" [src]="apiUrl + '/' + item.image" class="img-fluid rounded chat-image" alt="Chat image" />
+                  <a *ngIf="!isImage(item.image) && item.image" class="file-attachment" [href]="apiUrl + '/' + item.image" download="{{ apiUrl + '/' + item.image }}">
                     <i class="fas fa-file file-icon"></i>
                     <span class="file-name">{{ item.image.replace("upload/product/", "") }}</span>
                     <i class="fas fa-download download-icon"></i>
-                </a>
-            </div>
-        </li>
-    </ul>
-    <div class="bottom_wrapper clearfix">
-      <div class="message_input_wrapper">
-          <input class="message_input" placeholder="Message..." [(ngModel)]="messageInput"
-              (keyup.enter)="sendMessage(false)" />
+                  </a>
+                </div>
+              </li>
+        </ul>
       </div>
-      <div class="send_message" (click)="sendMessage(false)">
+      <div class="bottom_wrapper clearfix">
+        <div class="message_input_wrapper">
+          <input type="text" class="message_input" placeholder="Message..." [(ngModel)]="messageInput" (keyup.enter)="sendMessage(false)" />
+        </div>
+        <div class="send_message" (click)="sendMessage(false)">
           <div class="icon"></div>
           <div class="text">Send</div>
+        </div>
+        <app-image-upload class="mb-2 shadow-sm" [isShowImg]="false" (changeFile)="changeFileName($event)" [imageUrl]="imgName"></app-image-upload>
       </div>
-      <app-image-upload class="mb-2 shadow-sm" [isShowImg]="false"
-          (changeFile)="changeFileName($event)" [imageUrl]="imgName"></app-image-upload>
+    </div>
   </div>
-  </div>
-</div>
