--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -77,6 +77,54 @@
 </div>
 </section>
 
+<div class="container mt-5">
+    <div class="row">
+        <h1 class="display-3 fw-bold mb-4">Dịch vụ làm visa của chúng tôi</h1>
+        <!-- Dịch vụ Visa Mỹ -->
+        <div class="col-md-4">
+            <div class="card service-card">
+                <a href="https://kalivisa.com/hoa-ky/" target="_blank" rel="noopener noreferrer">
+                    <img src="https://kalivisa.com/wp-content/uploads/2023/04/my-1200x800.webp" alt="Visa Mỹ">
+                </a>
+                <div class="card-body">
+                    <p class="card-text">
+                        <a href="https://kalivisa.com/hoa-ky/">Kali Visa cung cấp visa Mỹ ngắn hạn. Trong đó hỗ trợ diện B1/B2: Du lịch – Thăm thân – Công tác. Xin visa Mỹ không quá khó nếu bạn có sự chuẩn bị tỉ mỉ, đáp ứng đầy đủ mọi yêu cầu của đại sứ quán.</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Dịch vụ Visa Úc -->
+        <div class="col-md-4">
+            <div class="card service-card">
+                <a href="https://kalivisa.com/australia/" target="_blank" rel="noopener noreferrer">
+                    <img src="https://kalivisa.com/wp-content/uploads/2023/04/uc-1200x800.webp" alt="Visa Úc">
+                </a>
+                <div class="card-body">
+                    <p class="card-text">
+                        <a href="https://kalivisa.com/australia/">Visa Úc gồm các loại visa, trong đó Kali Visa đang hỗ trợ diện visa 600, 482 và 462. Việc nhập cảnh Úc vô cùng dễ dàng và nhanh gọn giúp chuyến hành trình của bạn có thêm nhiều trải nghiệm thú vị.</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- Dịch vụ Visa Anh -->
+        <div class="col-md-4">
+            <div class="card service-card">
+                <a href="https://kalivisa.com/anh/" target="_blank" rel="noopener noreferrer">
+                    <img src="https://kalivisa.com/wp-content/uploads/2023/04/anh-1200x800.webp" alt="Visa Anh">
+                </a>
+                <div class="card-body">
+                    <p class="card-text">
+                        <a href="https://kalivisa.com/anh/">Visa Anh Quốc ngắn hạn cho phép Du lịch – Thăm thân – Công tác. Mỗi loại visa đều có thời gian lưu trú và điều kiện khác nhau vậy nên cần tìm hiểu kỹ lưỡng trước khi xin để hoàn tất thực hiện kế hoạch chuyến đi.</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 <!-- Testimonials Section -->
 <section class="testimonials-section py-7 bg-light">
   <div class="container">
